
Version 1.5.00-dev
 + Added Podzol & Red Sand to Excavation
 + Added Hardened Clay, Stained Clay, and Packed Ice to Mining blocks
 + Added Acacia and Dark Oak to Woodcutting blocks
 + Added Salmon, Clownfish, and Pufferfish to Fishing XP
 + Added new flowers and grasses to Herbalism XP
 + Added option to config.yml which allows players to always catch fish, even when a treasure is found
 ! Fishing XP now depends on the type of fish.
 ! Woodcutting XP in experience.yml and Woodcutting double drops in config.yml now use the tree species names. Oak is now Generic, and Spruce is now Redwood.
 ! Red_Rose was replaced by Poppy, and so the key in experience.yml has been updated accordingly.
 - Removed deprecated permission nodes
 - Removed "Treasure found!" message

Version 1.4.08-dev
 + Added a new skill; Alchemy. Special thanks to EasyMFnE for creating this!
 + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
 + Added the possibility to gain experience when using Fishing "Shake"
 + Added config options to disable various sound effects
 + Smelting now works with custom ores - add smelting XP value to blocks.yml, or it will default to 1/10th of normal XP.
 + Added automatic cleanup of backups folder.
 + Added bypass permission for finding Fishing traps
 + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
 + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
 + Added new experience bonus perk 'mcmmo.perks.xp.10percentboost.<skillname>' multiplies incoming XP by 1.1
 + Added new experience bonus perk 'mcmmo.perks.xp.customboost.<skillname>' multiplies incoming XP by the boost amount defined in the experience config
 + Added Ender Dragon, Wither, and Witch to combat experience multipliers - they do not give XP by default