@@ -289,6 +289,7 @@ Skills:
     Fishing:
         Level_Cap: 0
         Drops_Enabled: true
+        Override_Vanilla_Treasures: true
         # Always catch fish, even when treasure is found
         Extra_Fish: false
     Herbalism:
